Fix vote count wrapping in very popular posts

--- a/res/style.scss
+++ b/res/style.scss
@@ -129,11 +129,11 @@
         }
 
         & .vote {
-            float: none;
             display: inline-block;
             vertical-align: middle;
             margin-top: 5px;
             margin-right: 10px;
+            width: 40px;
         }
 
         & .at_official {
